--- a/www/templates/translators.html
+++ b/www/templates/translators.html
@@ -1,9 +1,22 @@
-<h1>Our highly qualified translators</h1>
-<div class="row row-content" ng-controller="TranslatorsController">
-	<ul class="media-list">
-        <li class="media" ng-repeat="translator in allTranslators">
-<!--            <show-translator></show-translator>-->
-            {{translators}}
-        </li>
-    </ul>
-</div>
+<ion-view view-title="Translators">
+  <ion-content>
+    <ion-list>
+      <ion-item ng-repeat="translator in translators">
+        <img ng-src="./img/ava1.png">
+          <h2>{{translator.firstName}}&nbsp;{{translator.lastName}}</h2>
+            <h3>Languages:</h3>
+                <ion-list>
+                    <ion-item ng-repeat="comb in translator.language_combination">
+                        from &nbsp;{{comb.source}}&nbsp; to {{comb.target}}
+                    </ion-item>
+                </ion-list>
+            <h3>Specialization:</h3>
+                <ion-list>
+                    <ion-item ng-repeat="spec in translator.specialization">
+                        {{spec}}
+                    </ion-item>
+                </ion-list>
+      </ion-item>
+    </ion-list>
+  </ion-content>
+</ion-view>
