--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -4,36 +4,48 @@
         <div class="item item-divider">
             Our translation agency in brief
         </div>
-        <div class="item item-thumbnail-left item-text-wrap">
-            <p>
-                Based on our long experience of translation services in a variety of languages and specializations, having offered top class services to various clients, we are confident that our state-of-the art expertise may be useful for your translation needs
-            </p>
-        </div>
+        <ul class="list list-inset">
+              <li class="item item-avatar item-text-wrap">
+                  <img ng-src="./img/aboutus.gif">
+                <h2>About us</h2 
+                <p>Based on our long experience of translation services in a variety of languages and specializations, having offered top class services to various clients, we are confident that our state-of-the art expertise may be useful for your translation needs</p>
+              </li>
+        </ul>
     </div>
       <div class="card">
           <div class="item item-divider">
             Services
           </div>
-          <div class="item item-thumbnail-left item-text-wrap">
+          <ul class="list list-inset">
+              <li class="item item-avatar item-text-wrap">
+                  <img ng-src="./img/translation.jpg">
                 <h2>Translation</h2 
                 <p>Written translation of text in a variety of languages in different specializations</p>
-          </div>
-          <div class="item item-thumbnail-left item-text-wrap">
+              </li>
+              
+              <li class="item item-avatar item-text-wrap">
+                  <img ng-src="./img/interpreting.jpg">
                 <h2>Interpreting</h2 
                 <p>Oral translation of speeches, meetings and other exchanges in a variety of language. Simultaneos and consecutive interpreting</p>
-          </div>
-          <div class="item item-thumbnail-left item-text-wrap">
+              </li>
+              <li class="item item-avatar item-text-wrap">
+                  <img ng-src="./img/localization.jpg">
                 <h2>Localization</h2 
                 <p>Adaptation of your product (software, system or other) to the specifics of local markets in different countries. International product promotion.</p>
-          </div>
+              </li>
+          </ul>
+          
       </div>
       <div class="card">
           <div class="item item-divider">
             Our team
           </div>
-          <div class="item item-thumbnail-left item-text-wrap">
+          <ul class="list list-inset">
+              <li class="item item-avatar item-text-wrap">
+                  <img ng-src="./img/team.jpg">
                 <p>A team of highly qualified and dedicated professionals at your service.</p>
-          </div>
+              </li>
+        </ul>
       </div>
   </ion-content>
 </ion-view>
