Fixed a bug in translators search

--- a/www/templates/sidebar.html
+++ b/www/templates/sidebar.html
@@ -27,7 +27,7 @@
         <ion-item menu-close href="#/app/translators">
           Translators
         </ion-item>
-        <ion-item menu-close href="#/app/search">
+        <ion-item menu-close href="#/app/search" ng-if="loggedIn">
           Search
         </ion-item>
         <ion-item class="item-divider">
