--- a/www/templates/translators.html
+++ b/www/templates/translators.html
@@ -4,7 +4,7 @@
     <ul class="list list-inset">
         <li class="item item-avatar item-text-wrap" ng-repeat="translator in translators">
 <!--        <ion-item ng-repeat="translator in translators">-->
-        <img ng-src="./img/ava1.png">
+        <img ng-src="./img/{{translator.picture}}">
           <h2>{{translator.firstName}}&nbsp;{{translator.lastName}}</h2>
             <h3>Languages:</h3>
                 <ion-list>
